# mcp-ntopng

./: .env.example  README.md  pyproject.toml
mcp_ntopng/: __init__.py  main.py  server.py
